<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="?android:attr/buttonBarStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.CalculatorActivity"
    android:background="@drawable/rectangle"
    >

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:stretchColumns="*"
        android:shrinkColumns="*"
        android:weightSum="5"
        android:background="@drawable/rectangle">

        <TableRow
            android:layout_width="match_parent">

            <TextView
                android:id="@+id/txtCalculations"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_span="4"
                android:layout_weight="1"
                android:gravity="end|bottom"
                android:textColor="#000000"
                app:autoSizeTextType="uniform"
                app:autoSizeMaxTextSize="60sp"
                app:autoSizeMinTextSize="50sp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:scrollbars="vertical"
                android:scrollHorizontally="false"
                android:scrollbarStyle="outsideOverlay"
                android:breakStrategy="simple"
                android:paddingStart="15dp"
                android:paddingEnd="35dp"
                android:background="@drawable/rectangle"
                />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/btnClear"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/c"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_width="0dip"
                app:autoSizeTextType="uniform"
                app:autoSizeMaxTextSize="60sp"
                app:autoSizeMinTextSize="45sp"
                android:textColor="#000000"
                android:foreground="@drawable/rectangle"/>

            <Button
                android:id="@+id/btnPosNeg"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/posNeg"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_width="0dip"
                app:autoSizeTextType="uniform"
                app:autoSizeMaxTextSize="60sp"
                app:autoSizeMinTextSize="45sp"
                android:textColor="#000000"
                android:foreground="@drawable/rectangle"/>

            <Button
                android:id="@+id/btnBackspace"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/backspace"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_width="0dip"
                app:autoSizeTextType="uniform"
                app:autoSizeMaxTextSize="60sp"
                app:autoSizeMinTextSize="45sp"
                android:textColor="#000000"
                android:foreground="@drawable/rectangle"/>

            <Button
                android:id="@+id/btnDivide"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/divide"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_width="0dip"
                app:autoSizeTextType="uniform"
                app:autoSizeMaxTextSize="60sp"
                app:autoSizeMinTextSize="45sp"
                android:textColor="#000000"
                android:foreground="@drawable/rectangle"/>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/btnSeven"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/_7"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_width="0dip"
                app:autoSizeTextType="uniform"
                app:autoSizeMaxTextSize="60sp"
                app:autoSizeMinTextSize="45sp"
                android:textColor="#000000"
                android:foreground="@drawable/rectangle"/>

            <Button
                android:id="@+id/btnEight"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/_8"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_width="0dip"
                app:autoSizeTextType="uniform"
                app:autoSizeMaxTextSize="60sp"
                app:autoSizeMinTextSize="45sp"
                android:textColor="#000000"
                android:foreground="@drawable/rectangle"/>

            <Button
                android:id="@+id/btnNine"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/_9"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_width="0dip"
                app:autoSizeTextType="uniform"
                app:autoSizeMaxTextSize="60sp"
                app:autoSizeMinTextSize="45sp"
                android:textColor="#000000"
                android:foreground="@drawable/rectangle"/>

            <Button
                android:id="@+id/btnMultiply"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/multiply"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_width="0dip"
                app:autoSizeTextType="uniform"
                app:autoSizeMaxTextSize="60sp"
                app:autoSizeMinTextSize="45sp"
                android:textColor="#000000"
                android:foreground="@drawable/rectangle"/>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/btnFour"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/_4"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_width="0dip"
                app:autoSizeTextType="uniform"
                app:autoSizeMaxTextSize="60sp"
                app:autoSizeMinTextSize="45sp"
                android:textColor="#000000"
                android:foreground="@drawable/rectangle"/>

            <Button
                android:id="@+id/btnFive"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/_5"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_width="0dip"
                app:autoSizeTextType="uniform"
                app:autoSizeMaxTextSize="60sp"
                app:autoSizeMinTextSize="45sp"
                android:textColor="#000000"
                android:foreground="@drawable/rectangle"/>

            <Button
                android:id="@+id/btnSix"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/_6"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_width="0dip"
                app:autoSizeTextType="uniform"
                app:autoSizeMaxTextSize="60sp"
                app:autoSizeMinTextSize="45sp"
                android:textColor="#000000"
                android:foreground="@drawable/rectangle"/>

            <Button
                android:id="@+id/btnSubtract"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/subtract"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_width="0dip"
                app:autoSizeTextType="uniform"
                app:autoSizeMaxTextSize="60sp"
                app:autoSizeMinTextSize="45sp"
                android:textColor="#000000"
                android:foreground="@drawable/rectangle"/>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/btnOne"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/_1"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_width="0dip"
                app:autoSizeTextType="uniform"
                app:autoSizeMaxTextSize="60sp"
                app:autoSizeMinTextSize="45sp"
                android:textColor="#000000"
                android:foreground="@drawable/rectangle"/>

            <Button
                android:id="@+id/btnTwo"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/_2"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_width="0dip"
                app:autoSizeTextType="uniform"
                app:autoSizeMaxTextSize="60sp"
                app:autoSizeMinTextSize="45sp"
                android:textColor="#000000"
                android:foreground="@drawable/rectangle"/>

            <Button
                android:id="@+id/btnThree"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/_3"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_width="0dip"
                app:autoSizeTextType="uniform"
                app:autoSizeMaxTextSize="60sp"
                app:autoSizeMinTextSize="45sp"
                android:textColor="#000000"
                android:foreground="@drawable/rectangle"/>

            <Button
                android:id="@+id/btnAddition"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/addition"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_width="0dip"
                app:autoSizeTextType="uniform"
                app:autoSizeMaxTextSize="60sp"
                app:autoSizeMinTextSize="45sp"
                android:textColor="#000000"
                android:foreground="@drawable/rectangle"/>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/btnDecimal"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/decimal"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_width="0dip"
                app:autoSizeTextType="uniform"
                app:autoSizeMaxTextSize="60sp"
                app:autoSizeMinTextSize="45sp"
                android:textColor="#000000"
                android:foreground="@drawable/rectangle"/>

            <Button
                android:id="@+id/btnZero"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/_0"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_width="0dip"
                app:autoSizeTextType="uniform"
                app:autoSizeMaxTextSize="60sp"
                app:autoSizeMinTextSize="45sp"
                android:textColor="#000000"
                android:foreground="@drawable/rectangle"/>

            <Button
                android:id="@+id/btnEqual"
                style="?android:attr/buttonBarButtonStyle"

                android:text="@string/equal"
                android:layout_weight="2"
                android:layout_height="match_parent"
                android:layout_width="0dip"
                app:autoSizeTextType="uniform"
                app:autoSizeMaxTextSize="60sp"
                app:autoSizeMinTextSize="45sp"
                android:textColor="#000000"
                android:foreground="@drawable/rectangle"/>
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>